--- a/public/scss/_components.scss
+++ b/public/scss/_components.scss
@@ -247,16 +247,35 @@
 	&__hours {
 		display: flex;
 		flex-direction: column;
-		padding: 2.25rem 0.5rem 0.25rem;
+		padding: 0;
 		background: rgba(15, 23, 42, 0.03);
 		border-right: 1px solid rgba(15, 23, 42, 0.08);
 	}
 
-	&__hour {
+	&__hours-list {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
 		flex: 1;
+		width: 100%;
+		padding: 0 0.5rem;
+	}
+
+	&__hour {
+		height: 0;
+		display: flex;
+		align-items: center;
 		font-size: 0.7rem;
 		color: #64748b;
-		min-height: 2rem;
+		white-space: nowrap;
+
+		&:first-child {
+			align-items: flex-start;
+		}
+
+		&:last-child {
+			align-items: flex-end;
+		}
 	}
 
 	&__days {
